htdocs/theme/raw/sass/typography/_tables.scss
.table>thead>tr>th {
    border-color: $table-border-color;
    &.active {
        background: scale-color($table-active-bg, $lightness: 75%);
    }
}
td.short {
    width: 180px;
}
td.tiny {
    width: 20px;
    &.with-icon {
        padding: 20px 0 8px 8px;
    }
}

.table {
    max-width:100%;
    border-collapse: separate;
    border-spacing: 0;
    .icon-cell {
        min-width: 50px; //width of two icons
        .icon {
            margin-left: 5px;
        }
    }

    label {
        min-width: 0;
    }

    thead {
        text-transform: uppercase;
        color: $gray-500;
        font-size: $font-size-base;
        th, td {
            font-weight: 300;
        }
        .allnone-toggles {
            width: 81px;
            .btn-sm {
                font-size: 10px;
            }
        }

        .search-results-sort-column {
            position: relative;

            &:last-child {
                min-width: 100px;
            }

            & > a::after {
                right: 4px;
                text-decoration: none;
                color: $theme-text-midtone-color;
            }
            &:last-child > a::after {
                right: 0;
            }
        }
    }

    tr.inactive {
        background: scale-color($warning, $lightness: 70%) !important;
    }

    td input[type=radio],
    td input[type=checkbox] {
        margin: 0 auto;
        display: block;
        &.with-label {
            margin: 0;
        }
    }

    td {
        white-space: normal;
        &.movebuttons {
            width: 50px;
            .movedown,
            .moveup {
                @extend .text-midtone;
                font-size: 20px;
            }
        }
        &.control-buttons {
            width: 90px;
            text-align: right;
            a,
            .pieform {
                display: inline-block;
            }
            .btn-sm {
                padding: 2px 7px;
            }
            // Allows space for when you also have a unzip button in the control button butn-group
            &.includes-unzip {
                width: 110px;
            }
        }
        h3 {
            font-weight: 300;
            font-family: $font-family-sans-serif;
            font-size: $font-size-base * 1.214285;
            margin: 0;
        }
    }

    th {
        border-top: 0;
    }

    .narrow {
        width: 20px;
        .checkbox {
            margin-top: 20px;
        }
    }

    .tiny .checkbox {
        margin-top: 10px;
    }

    small {
        font-size: $font-size-base - 2;
    }

    // admin configure site add link table
    &.nohead {
        th:not(:last-child) {
            min-width: 150px;
            @include media-breakpoint-up(md) {
                min-width: auto;
            }
        }
    }
    > tbody > tr {
        &.active td {
            background-color: $table-active-bg;
        }
        > th {
            border-top: 1px solid $table-border-color;
        }
        &.warning td {
            background-color: $state-warning-bg;
        }
    }
}

.table-hover {
    > tbody > tr {
        &.no-hover {
            &:hover {
                background: transparent;
                cursor: default;
            }
        }
        &:hover {
            background: scale-color($table-hover-bg, $lightness: 60%);

            cursor: pointer;
            .filename {
                color: $link-hover-color;
            }
        }
        .file-download-link {
            color: $theme-text-color;
            &:hover {
                color: $link-hover-color;
            }
        }
    }
}

.table-padded {
    >tbody>tr>td {
        padding-top: 15px;
        padding-bottom: 15px;
    }
}


.table-small{
    font-size: 0.8em;
    th {
        font-size: 0.8em;
    }
    >thead>tr>th,
    >thead>tr>td,
    >tbody>tr>th,
    >tbody>tr>td,
    >tfoot>tr>th,
    >tfoot>tr>td {
        padding: 5px 3px;
        &:first-child {
            padding-left:8px;
        }
        &:last-child {
            padding-right: 8px;
        }
    }

    > thead>tr> th {
        padding: 10px 3px;
    }

    .btn-sm {
        font-size: 10px;
    }
}

.table-short {
    width: 100%;
    @include media-breakpoint-up(md) {
        width: 40%;
    }
}

.table-selectedlist {
    font-size: $font-size-sm;
}

table.table tr {
    .with-checkbox {
        min-width: 74px;

        input {
            margin-top:12px;
            margin-right:3px;
            float:left;
        }
    }
    .with-selectall {
        min-width: 110px;
    }
}

.table > thead > tr.th-has-shared > th {
    padding-bottom: 15px;
}

.th-shared-wrap {
    position: relative;
    padding-top: 7px;
}

.th-shared-heading {
    position: absolute;
    top: -8px;
    left: 13px;
    width: 200%;
    text-align: center;
}

.th-shared-title {
    font-size: 0.8em;
    position: relative;
    margin-bottom: -12px;
    display: block;
}

.table-help-text {
    @extend .text-midtone;
    float: right;
    display: block;
    line-height: 30px;
    vertical-align: bottom;
    margin: 5px;
    font-size: 16px;
    font-weight: 100;
}

// Unset border top on the first row of the table
.table>tbody>tr:first-child>th,
.table>tbody>tr:first-child td {
    border-top-width: 0;
}

// Fixing very long words without spaces in the table body.
.table-group-list>tbody>tr>td,
.table-group-list>tbody>tr>th {
    word-break: break-all;
}

// Specific width for group table.
.table>thead>tr>th.groupname,
.table>thead>tr>th.groupshortname,
.table>thead>tr>th.groupmanagebuttons {
    width: 15%;
}

.table.profile-info {
    table-layout: fixed;
    td,
    th {
        word-break: break-all;
    }
    >tbody>tr:first-child>td {
        border-top-width: 1px;
    }
}

